<resources>
    <string name="app_name">BestMovie</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="search_default">Inserisci il titolo di un film!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_all">View All</string>
    <string name="home">Home</string>
    <string name="search">Cerca</string>
    <string name="something_went_wrong">Qualcosa è andato storto... Perfavore, riprova</string>
    <string name="search_results">Risultati ricerca</string>
    <string name="no_search_results_found">Nessun risultato</string>
    <string name="search_any_movie_here">Cerca un film qui..</string>
    <string name="search_with_filters">Ricerca con filtri</string>
    <string name="high_popularity">Più popolari</string>
    <string name="low_popularity">Meno popolari</string>
    <string name="high_votes">Più votati</string>
    <string name="low_votes">Meno votati</string>
    <string name="popular">Popolari</string>
    <string name="top_rated">Top rated</string>
    <string name="upcoming">In uscita al cinema</string>
    <string name="now_playing">Ora nei cinema</string>
    <string name="genres">Generi</string>
    <string name="release_date">Uscita</string>
    <string name="total_votes">Numero Voti</string>
    <string name="genre">Genere:\u0020</string>
    <string name="cast_members">Attori</string>
    <string name="other_filters">Altri filtri</string>
</resources>