<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="it.unimib.disco.sal.bestmovie.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/showMovieDetailsAction"
            app:destination="@id/movieDetailsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="it.unimib.disco.sal.bestmovie.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="it.unimib.disco.sal.bestmovie.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="it.unimib.disco.sal.bestmovie.MovieDetailsFragment"
        android:label="fragment_movie_details"
        tools:layout="@layout/fragment_movie_details" >
        <argument
            android:name="movie"
            app:argType="it.unimib.disco.sal.bestmovie.models.Movie" />
    </fragment>
</navigation>